Issue #3151: Update spacing for CTA region

--- a/_assets/styles/scss/05-regions/_call-to-action.scss
+++ b/_assets/styles/scss/05-regions/_call-to-action.scss
@@ -34,6 +34,6 @@ category: Regions
   }
 
   .region--cta__text {
-    margin-bottom: $base-spacing;
+    margin-bottom: $base-spacing * 2;
   }
 }
